--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	<div class="wrapper head">
 		<div class="content title">S o l a r &nbsp; C l o c k</div>
 		<div class="content clock">
-			<div class="content time">00:00</div>
+			<div class="content time">12 : 00</div>
 		</div>
-		<div class="content period">XX</div>
+		<div class="content period">AM</div>
 	</div>
 	
 	<div class="wrapper animation">
