--- a/index.html
+++ b/index.html
@@ -20,16 +20,25 @@
  </head>
  <body onload="onload()">
 	<div class="wrapper head">
-		<div class="content title">S o l a r &nbsp; C l o c k</div>
-		<div class="content clock">
+		<div class="content title fadeInUp">S o l a r &nbsp; C l o c k</div>
+		<div class="content clock fadeIn">
 			<div class="content time">12 : 00</div>
 		</div>
-		<div class="content period">AM</div>
+		<div class="content period fadeIn">AM</div>
 	</div>
 	
 	<div class="wrapper animation">
-		<div class="animated sun"></div>
-		<div class="animated earth"></div>
+		<div class="sun"></div>
+		<div class="moon"></div>
+		<div class="container rise">
+			<div class="line rise"></div>
+			<div class="box rise"></div>
+		</div>
+		<div class="earth"></div>
+		<div class="container set">
+			<div class="line set"></div>
+			<div class="box set"></div>
+		</div>
 	</div>
  </body>
  </html>
